refactor(core): Re-architect exception handling and clean up service layers
예외 처리 아키텍처를 재설계하여 책임 분리와 유지보수성을 강화

- 예외 계층 구조 개편
  - SystemException(로그 전용)과 BusinessException(알림 전용)으로 분리
  - NotifiableSystemException 도입으로 사용자 알림이 필요한 시스템 오류 처리
  - 불필요한 구체적 예외 클래스들을 삭제하고 팩토리 메서드 패턴 적용

- 서비스 계층 리팩토링
  - GameService, PieceService 등 주요 서비스에 새로운 예외 처리 패턴 적용
  - PieceService: 기물 소환 로직을 spawnBatch 메서드 등으로 분리하여 가독성 개선
  - GameService: 불필요한 종료/정리 로직 제거 및 코드 간소화

- 인프라 계층 개선
  - DefaultExceptionDispatcher: 예외 처리 중앙화 로직 개선

- 기타
  - PieceSelectionService 파일 이동 및 정리
  - 전반적인 코드 클린업 및 컨벤션 적용